@@ -64,7 +64,7 @@ dataTypeUnknown.unknownTypes=Unknown DataTypes   (non-standard SQL type codes)
 floatingPointBase.typeBigDecimal=FLOAT, REAL, DOUBLE, NUMERIC, DECIMAL (SQL types 6, 7, 8, 2, 3)
 floatingPointBase.useDefaultFormat=Use default format ({0})
 
-floatingPointBase.optUseUserDefinedFormat=Use user defined format
+floatingPointBase.optUseUserDefinedFormat=Use user defined format ({0}), ({1}) with:
 
 floatingPointBase.uselocaleDependendFormat=Use locale-dependent format ({0}), ({1}) with:
 floatingPointBase.uselocaleDependendFormat.minDecimalDigits=a) minimum number of decimal digits of (0 means no minimum)
